--- a/client/src/i18n/en-GB.json
+++ b/client/src/i18n/en-GB.json
@@ -2,6 +2,7 @@
   "button.close": "Close",
   "button.submit": "Submit",
   "button.buy": "Buy",
+  "button.pay": "Pay",
   "button.addToCart": "Add to basket",
   "button.addingToCart": "Adding to basket",
   "button.viewCart": "View Cart",
@@ -9,13 +10,17 @@
   "button.subscribe": "Subscribe",
   "button.yearlySubscription": "Annual",
   "button.monthlySubscription": "Monthly",
+  "button.clickHere": "Click here",
   "label.userInformation": "User information",
   "label.loggedInUser": "Currently signed-in user",
   "label.enterValue": "Enter a value, e.g.",
   "label.enterValuePlaceholder": "Enter your value here",
+  "label.emptyCart": "Your basket is empty",
   "label.quantity": "Quantity",
+  "label.quantityShort": "Qty",
   "label.productName": "Product Name",
   "label.productPrice": "Product Price",
+  "label.productUnitPrice": "Unit price",
   "label.productDescription": "Product Description",
   "label.productCategory": "Product Category",
   "label.productImage": "Product Image",
@@ -28,5 +33,9 @@
   "label.subscriptionProducts": "Subscription Products",
   "label.loadingProducts": "Loading products…",
   "label.loadingSubscriptionProducts": "Loading subscription products...",
-  "label.loadingFallback": "Loading, please wait…"
+  "label.loadingFallback": "Loading, please wait…",
+  "label.subtotal": "Subtotal",
+  "label.checkoutAccount": "Account",
+  "label.checkoutAddress": "Address",
+  "label.checkoutPayment": "Payment"
 }
