--- a/client/src/i18n/en-US.json
+++ b/client/src/i18n/en-US.json
@@ -2,6 +2,7 @@
   "button.close": "Close",
   "button.submit": "Submit",
   "button.buy": "Buy",
+  "button.pay": "Pay",
   "button.addToCart": "Add to cart",
   "button.addingToCart": "Adding to Cart",
   "button.viewCart": "View Cart",
@@ -9,13 +10,18 @@
   "button.subscribe": "Subscribe",
   "button.yearlySubscription": "Yearly",
   "button.monthlySubscription": "Monthly",
+  "button.clickHere": "Click here",
   "label.userInformation": "User Information",
   "label.loggedInUser": "Currently logged-in user",
   "label.enterValue": "Enter a value e.g.",
   "label.enterValuePlaceholder": "Enter your value here",
+  "label.emptyCart": "Your cart is empty",
+  "label.emptyCartDescription": "Add products to your cart to proceed with checkout.",
   "label.quantity": "Quantity",
+  "label.quantityShort": "Qty",
   "label.productName": "Product Name",
   "label.productPrice": "Product Price",
+  "label.productUnitPrice": "Unit Price",
   "label.productDescription": "Product Description",
   "label.productCategory": "Product Category",
   "label.productImage": "Product Image",
@@ -28,5 +34,9 @@
   "label.subscriptionProducts": "Subscription Products",
   "label.loadingProducts": "Loading products…",
   "label.loadingSubscriptionProducts": "Loading subscription products…",
-  "label.loadingFallback": "Loading, please wait…"
+  "label.loadingFallback": "Loading, please wait…",
+  "label.subtotal": "Subtotal",
+  "label.checkoutAccount": "Account",
+  "label.checkoutAddress": "Address",
+  "label.checkoutPayment": "Payment"
 }
