#1 - Chore: Sorted, and grouped, INTL values

--- a/client/src/i18n/de-DE.json
+++ b/client/src/i18n/de-DE.json
@@ -1,41 +1,42 @@
 {
-  "button.close": "Schließen",
-  "button.submit": "Absenden",
-  "button.buy": "Kaufen",
-  "button.pay": "Bezahlen",
   "button.addToCart": "In den Warenkorb",
   "button.addingToCart": "In den Warenkorb legen",
-  "button.viewCart": "Warenkorb ansehen",
+  "button.buy": "Kaufen",
   "button.checkout": "Zur Kasse",
-  "button.subscribe": "Abonnieren",
-  "button.yearlySubscription": "Jährlich",
-  "button.monthlySubscription": "Monatlich",
+  "button.close": "Schließen",
   "button.clickHere": "Hier klicken",
-  "label.userInformation": "Benutzerinformationen",
-  "label.loggedInUser": "Derzeit angemeldeter Benutzer",
-  "label.enterValue": "Geben Sie einen Wert ein, z. B.",
-  "label.enterValuePlaceholder": "Geben Sie hier Ihren Wert ein",
-  "label.emptyCart": "Ihr Warenkorb ist leer",
-  "label.quantity": "Menge",
-  "label.quantityShort": "Menge",
-  "label.productName": "Produktname",
-  "label.productPrice": "Produktpreis",
-  "label.productUnitPrice": "Stückpreis",
-  "label.productDescription": "Produktbeschreibung",
-  "label.productCategory": "Produktkategorie",
-  "label.productImage": "Produktbild",
-  "label.productDetails": "Produktdetails",
-  "label.productQuantity": "Produktmenge",
-  "label.productTotal": "Gesamtpreis",
-  "label.productSpecifications": "Produktspezifikationen",
-  "label.productColor": "Farbe",
-  "label.productVariants": "Varianten",
-  "label.subscriptionProducts": "Abonnementprodukte",
-  "label.loadingProducts": "Produkte werden geladen…",
-  "label.loadingSubscriptionProducts": "Abonnementprodukte werden geladen…",
-  "label.loadingFallback": "Laden, bitte warten…",
-  "label.subtotal": "Zwischensumme",
+  "button.monthlySubscription": "Monatlich",
+  "button.pay": "Bezahlen",
+  "button.submit": "Absenden",
+  "button.subscribe": "Abonnieren",
+  "button.viewCart": "Warenkorb ansehen",
+  "button.yearlySubscription": "Jährlich",
   "label.checkoutAccount": "Konto",
   "label.checkoutAddress": "Adresse",
-  "label.checkoutPayment": "Zahlung"
+  "label.checkoutPayment": "Zahlung",
+  "label.emptyCart": "Ihr Warenkorb ist leer",
+  "label.emptyCartDescription": "Fügen Sie Produkte zu Ihrem Warenkorb hinzu, um mit der Kasse fortzufahren.",
+  "label.enterValue": "Geben Sie einen Wert ein, z. B.",
+  "label.enterValuePlaceholder": "Geben Sie hier Ihren Wert ein",
+  "label.loadingFallback": "Laden, bitte warten…",
+  "label.loadingProducts": "Produkte werden geladen…",
+  "label.loadingSubscriptionProducts": "Abonnementprodukte werden geladen…",
+  "label.loggedInUser": "Derzeit angemeldeter Benutzer",
+  "label.productCategory": "Produktkategorie",
+  "label.productColor": "Farbe",
+  "label.productDescription": "Produktbeschreibung",
+  "label.productDetails": "Produktdetails",
+  "label.productImage": "Produktbild",
+  "label.productName": "Produktname",
+  "label.productPrice": "Produktpreis",
+  "label.productQuantity": "Produktmenge",
+  "label.productSpecifications": "Produktspezifikationen",
+  "label.productTotal": "Gesamtpreis",
+  "label.productUnitPrice": "Stückpreis",
+  "label.productVariants": "Varianten",
+  "label.quantity": "Menge",
+  "label.quantityShort": "Menge",
+  "label.subtotal": "Zwischensumme",
+  "label.subscriptionProducts": "Abonnementprodukte",
+  "label.userInformation": "Benutzerinformationen"
 }
