--- a/client/src/i18n/en-US.json
+++ b/client/src/i18n/en-US.json
@@ -1,42 +1,42 @@
 {
-  "button.close": "Close",
-  "button.submit": "Submit",
-  "button.buy": "Buy",
-  "button.pay": "Pay",
   "button.addToCart": "Add to cart",
   "button.addingToCart": "Adding to Cart",
-  "button.viewCart": "View Cart",
+  "button.buy": "Buy",
   "button.checkout": "Checkout",
-  "button.subscribe": "Subscribe",
-  "button.yearlySubscription": "Yearly",
-  "button.monthlySubscription": "Monthly",
   "button.clickHere": "Click here",
-  "label.userInformation": "User Information",
-  "label.loggedInUser": "Currently logged-in user",
-  "label.enterValue": "Enter a value e.g.",
-  "label.enterValuePlaceholder": "Enter your value here",
-  "label.emptyCart": "Your cart is empty",
-  "label.emptyCartDescription": "Add products to your cart to proceed with checkout.",
-  "label.quantity": "Quantity",
-  "label.quantityShort": "Qty",
-  "label.productName": "Product Name",
-  "label.productPrice": "Product Price",
-  "label.productUnitPrice": "Unit Price",
-  "label.productDescription": "Product Description",
-  "label.productCategory": "Product Category",
-  "label.productImage": "Product Image",
-  "label.productDetails": "Product Details",
-  "label.productQuantity": "Product Quantity",
-  "label.productTotal": "Total Price",
-  "label.productSpecifications": "Specifications",
-  "label.productColor": "Color",
-  "label.productVariants": "Variants",
-  "label.subscriptionProducts": "Subscription Products",
-  "label.loadingProducts": "Loading products…",
-  "label.loadingSubscriptionProducts": "Loading subscription products…",
-  "label.loadingFallback": "Loading, please wait…",
-  "label.subtotal": "Subtotal",
+  "button.close": "Close",
+  "button.monthlySubscription": "Monthly",
+  "button.pay": "Pay",
+  "button.submit": "Submit",
+  "button.subscribe": "Subscribe",
+  "button.viewCart": "View Cart",
+  "button.yearlySubscription": "Yearly",
   "label.checkoutAccount": "Account",
   "label.checkoutAddress": "Address",
-  "label.checkoutPayment": "Payment"
+  "label.checkoutPayment": "Payment",
+  "label.emptyCart": "Your cart is empty",
+  "label.emptyCartDescription": "Add products to your cart to proceed with checkout.",
+  "label.enterValue": "Enter a value, e.g.",
+  "label.enterValuePlaceholder": "Enter your value here",
+  "label.loadingFallback": "Loading, please wait…",
+  "label.loadingProducts": "Loading products…",
+  "label.loadingSubscriptionProducts": "Loading subscription products…",
+  "label.loggedInUser": "Currently logged-in user",
+  "label.productCategory": "Product Category",
+  "label.productColor": "Color",
+  "label.productDescription": "Product Description",
+  "label.productDetails": "Product Details",
+  "label.productImage": "Product Image",
+  "label.productName": "Product Name",
+  "label.productPrice": "Product Price",
+  "label.productQuantity": "Product Quantity",
+  "label.productSpecifications": "Specifications",
+  "label.productTotal": "Total Price",
+  "label.productUnitPrice": "Unit Price",
+  "label.productVariants": "Variants",
+  "label.quantity": "Quantity",
+  "label.quantityShort": "Qty",
+  "label.subtotal": "Subtotal",
+  "label.subscriptionProducts": "Subscription Products",
+  "label.userInformation": "User Information"
 }
