#3 - Feat: Displaying the users' subscriptions, and detailed information on its own view

--- a/client/src/i18n/de-DE.json
+++ b/client/src/i18n/de-DE.json
@@ -11,17 +11,23 @@
   "button.subscribe": "Abonnieren",
   "button.viewCart": "Warenkorb ansehen",
   "button.yearlySubscription": "Jährlich",
+  "label.amountDue": "Fälliger Betrag",
+  "label.amountRemaining": "Verbleibender Betrag",
+  "label.collectionMethod": "Einsammelungsmethode",
   "label.checkoutAccount": "Konto",
   "label.checkoutAddress": "Adresse",
   "label.checkoutPayment": "Zahlung",
+  "label.currentPeriod": "Aktueller Zeitraum",
   "label.emptyCart": "Ihr Warenkorb ist leer",
   "label.emptyCartDescription": "Fügen Sie Produkte zu Ihrem Warenkorb hinzu, um mit der Kasse fortzufahren.",
+  "label.endDate": "Enddatum",
   "label.enterValue": "Geben Sie einen Wert ein, z. B.",
   "label.enterValuePlaceholder": "Geben Sie hier Ihren Wert ein",
   "label.loadingFallback": "Laden, bitte warten…",
   "label.loadingProducts": "Produkte werden geladen…",
   "label.loadingSubscriptionProducts": "Abonnementprodukte werden geladen…",
   "label.loggedInUser": "Derzeit angemeldeter Benutzer",
+  "label.payments": "Zahlungen",
   "label.productCategory": "Produktkategorie",
   "label.productColor": "Farbe",
   "label.productDescription": "Produktbeschreibung",
@@ -36,7 +42,13 @@
   "label.productVariants": "Varianten",
   "label.quantity": "Menge",
   "label.quantityShort": "Menge",
+  "label.recurrence": "Wiederholung",
+  "label.seeBillingDetails": "Rechnungsdetails anzeigen",
+  "label.seeCurrentPeriodDetails": "Details zum aktuellen Zeitraum anzeigen",
+  "label.startDate": "Startdatum",
+  "label.status": "Status",
   "label.subtotal": "Zwischensumme",
+  "label.subscriptionId": "Abonnement-ID",
   "label.subscriptionProducts": "Abonnementprodukte",
   "label.userInformation": "Benutzerinformationen",
   "label.userSubscriptions": "Benutzerabonnements",
