--- a/client/src/i18n/en-GB.json
+++ b/client/src/i18n/en-GB.json
@@ -11,17 +11,23 @@
   "button.subscribe": "Subscribe",
   "button.viewCart": "View Cart",
   "button.yearlySubscription": "Annual",
+  "label.amountDue": "Amount due",
+  "label.amountRemaining": "Amount remaining",
+  "label.collectionMethod": "Collection method",
   "label.checkoutAccount": "Account",
   "label.checkoutAddress": "Address",
   "label.checkoutPayment": "Payment",
+  "label.currentPeriod": "Current period",
   "label.emptyCart": "Your basket is empty",
-  "label.emptyCartDescription": "Add products to your basket to proceed with checkout.",
+  "label.emptyCartDescription": "Add products to your basket to proceed to checkout.",
+  "label.endDate": "End date",
   "label.enterValue": "Enter a value, e.g.",
   "label.enterValuePlaceholder": "Enter your value here",
   "label.loadingFallback": "Loading, please wait…",
   "label.loadingProducts": "Loading products…",
   "label.loadingSubscriptionProducts": "Loading subscription products…",
   "label.loggedInUser": "Currently signed-in user",
+  "label.payments": "Payments",
   "label.productCategory": "Product Category",
   "label.productColor": "Colour",
   "label.productDescription": "Product Description",
@@ -36,7 +42,13 @@
   "label.productVariants": "Variants",
   "label.quantity": "Quantity",
   "label.quantityShort": "Qty",
+  "label.recurrence": "Recurrence",
+  "label.seeBillingDetails": "View billing details",
+  "label.seeCurrentPeriodDetails": "View current period details",
+  "label.startDate": "Start date",
+  "label.status": "Status",
   "label.subtotal": "Subtotal",
+  "label.subscriptionId": "Subscription ID",
   "label.subscriptionProducts": "Subscription Products",
   "label.userInformation": "User Information",
   "label.userSubscriptions": "User Subscriptions",
