--- a/client/src/i18n/en-US.json
+++ b/client/src/i18n/en-US.json
@@ -11,17 +11,23 @@
   "button.subscribe": "Subscribe",
   "button.viewCart": "View Cart",
   "button.yearlySubscription": "Yearly",
+  "label.amountDue": "Amount Due",
+  "label.amountRemaining": "Amount Remaining",
+  "label.collectionMethod": "Collection Method",
   "label.checkoutAccount": "Account",
   "label.checkoutAddress": "Address",
   "label.checkoutPayment": "Payment",
+  "label.currentPeriod": "Current Period",
   "label.emptyCart": "Your cart is empty",
   "label.emptyCartDescription": "Add products to your cart to proceed with checkout.",
+  "label.endDate": "End Date",
   "label.enterValue": "Enter a value, e.g.",
   "label.enterValuePlaceholder": "Enter your value here",
   "label.loadingFallback": "Loading, please wait…",
   "label.loadingProducts": "Loading products…",
   "label.loadingSubscriptionProducts": "Loading subscription products…",
   "label.loggedInUser": "Currently logged-in user",
+  "label.payments": "Payments",
   "label.productCategory": "Product Category",
   "label.productColor": "Color",
   "label.productDescription": "Product Description",
@@ -36,7 +42,13 @@
   "label.productVariants": "Variants",
   "label.quantity": "Quantity",
   "label.quantityShort": "Qty",
+  "label.recurrence": "Recurrence",
+  "label.seeBillingDetails": "See billing details",
+  "label.seeCurrentPeriodDetails": "See current period details",
+  "label.startDate": "Start Date",
+  "label.status": "Status",
   "label.subtotal": "Subtotal",
+  "label.subscriptionId": "Subscription ID",
   "label.subscriptionProducts": "Subscription Products",
   "label.userInformation": "User Information",
   "label.userSubscriptions": "User Subscriptions",
