#3 - Fix: Missing localized labels

--- a/client/src/i18n/de-DE.json
+++ b/client/src/i18n/de-DE.json
@@ -13,6 +13,9 @@
   "button.yearlySubscription": "Jährlich",
   "label.amountDue": "Fälliger Betrag",
   "label.amountRemaining": "Verbleibender Betrag",
+  "label.chargeAutomatically": "Automatisch abbuchen",
+  "label.chargeSendInvoice": "Rechnung senden",
+  "label.chargeUnknown": "Unbekannte Methode",
   "label.collectionMethod": "Einsammelungsmethode",
   "label.checkoutAccount": "Konto",
   "label.checkoutAddress": "Adresse",
@@ -27,6 +30,7 @@
   "label.loadingProducts": "Produkte werden geladen…",
   "label.loadingSubscriptionProducts": "Abonnementprodukte werden geladen…",
   "label.loggedInUser": "Derzeit angemeldeter Benutzer",
+  "label.noInformation": "Keine Informationen verfügbar",
   "label.payments": "Zahlungen",
   "label.productCategory": "Produktkategorie",
   "label.productColor": "Farbe",
