--- a/client/src/i18n/en-US.json
+++ b/client/src/i18n/en-US.json
@@ -13,6 +13,9 @@
   "button.yearlySubscription": "Yearly",
   "label.amountDue": "Amount Due",
   "label.amountRemaining": "Amount Remaining",
+  "label.chargeAutomatically": "Charge automatically",
+  "label.chargeSendInvoice": "Send invoice",
+  "label.chargeUnknown": "Unknown method",
   "label.collectionMethod": "Collection Method",
   "label.checkoutAccount": "Account",
   "label.checkoutAddress": "Address",
@@ -27,6 +30,7 @@
   "label.loadingProducts": "Loading products…",
   "label.loadingSubscriptionProducts": "Loading subscription products…",
   "label.loggedInUser": "Currently logged-in user",
+  "label.noInformation": "No information available",
   "label.payments": "Payments",
   "label.productCategory": "Product Category",
   "label.productColor": "Color",
