#3 - Feat: Add modal to handle subscription cancel, and styling enhancements

--- a/client/src/i18n/en-US.json
+++ b/client/src/i18n/en-US.json
@@ -2,6 +2,7 @@
   "button.addToCart": "Add to cart",
   "button.addingToCart": "Adding to Cart",
   "button.buy": "Buy",
+  "button.cancel": "Cancel",
   "button.checkout": "Checkout",
   "button.clickHere": "Click here",
   "button.close": "Close",
@@ -9,6 +10,7 @@
   "button.pay": "Pay",
   "button.submit": "Submit",
   "button.subscribe": "Subscribe",
+  "button.update": "Update",
   "button.viewCart": "View Cart",
   "button.yearlySubscription": "Yearly",
   "label.amountDue": "Amount Due",
@@ -16,11 +18,12 @@
   "label.chargeAutomatically": "Charge automatically",
   "label.chargeSendInvoice": "Send invoice",
   "label.chargeUnknown": "Unknown method",
-  "label.collectionMethod": "Collection Method",
   "label.checkoutAccount": "Account",
   "label.checkoutAddress": "Address",
   "label.checkoutPayment": "Payment",
+  "label.collectionMethod": "Collection Method",
   "label.currentPeriod": "Current Period",
+  "label.delete": "Delete",
   "label.emptyCart": "Your cart is empty",
   "label.emptyCartDescription": "Add products to your cart to proceed with checkout.",
   "label.endDate": "End Date",
@@ -54,10 +57,14 @@
   "label.subtotal": "Subtotal",
   "label.subscriptionId": "Subscription ID",
   "label.subscriptionProducts": "Subscription Products",
-  "label.userInformation": "User Information",
-  "label.userSubscriptions": "User Subscriptions",
-  "label.userAvailableSubscriptionsLabel": "The current user has",
+  "label.update": "Update",
   "label.userAvailableSubscriptionsCount": "{count, plural, one {# subscription} other {# subscriptions}}",
+  "label.userAvailableSubscriptionsLabel": "The current user has",
+  "label.userDeleteSubscriptionWarning": "Are you sure you want to cancel the subscription with ID {id}? This action cannot be undone.",
+  "label.userInformation": "User Information",
+  "label.userManageSubscription": "Manage subscription",
+  "label.userManageSubscriptionsLabel": "To manage subscriptions.",
   "label.userNoSubscriptions": "The current user has no subscriptions available.",
-  "label.userManageSubscriptionsLabel": "To manage subscriptions."
+  "label.userSubscriptions": "User Subscriptions",
+  "label.warning": "Warning"
 }
