--- a/client/src/i18n/de-DE.json
+++ b/client/src/i18n/de-DE.json
@@ -2,13 +2,15 @@
   "button.addToCart": "In den Warenkorb",
   "button.addingToCart": "In den Warenkorb legen",
   "button.buy": "Kaufen",
+  "button.cancel": "Abbrechen",
   "button.checkout": "Zur Kasse",
-  "button.close": "Schließen",
   "button.clickHere": "Hier klicken",
+  "button.close": "Schließen",
   "button.monthlySubscription": "Monatlich",
   "button.pay": "Bezahlen",
   "button.submit": "Absenden",
   "button.subscribe": "Abonnieren",
+  "button.update": "Aktualisieren",
   "button.viewCart": "Warenkorb ansehen",
   "button.yearlySubscription": "Jährlich",
   "label.amountDue": "Fälliger Betrag",
@@ -16,11 +18,12 @@
   "label.chargeAutomatically": "Automatisch abbuchen",
   "label.chargeSendInvoice": "Rechnung senden",
   "label.chargeUnknown": "Unbekannte Methode",
-  "label.collectionMethod": "Einsammelungsmethode",
   "label.checkoutAccount": "Konto",
   "label.checkoutAddress": "Adresse",
   "label.checkoutPayment": "Zahlung",
+  "label.collectionMethod": "Einsammelungsmethode",
   "label.currentPeriod": "Aktueller Zeitraum",
+  "label.delete": "Löschen",
   "label.emptyCart": "Ihr Warenkorb ist leer",
   "label.emptyCartDescription": "Fügen Sie Produkte zu Ihrem Warenkorb hinzu, um mit der Kasse fortzufahren.",
   "label.endDate": "Enddatum",
@@ -54,10 +57,14 @@
   "label.subtotal": "Zwischensumme",
   "label.subscriptionId": "Abonnement-ID",
   "label.subscriptionProducts": "Abonnementprodukte",
-  "label.userInformation": "Benutzerinformationen",
-  "label.userSubscriptions": "Benutzerabonnements",
-  "label.userAvailableSubscriptionsLabel": "Der aktuelle Benutzer hat",
+  "label.update": "Aktualisieren",
   "label.userAvailableSubscriptionsCount": "{count, plural, one {# Abonnement} other {# Abonnements}}",
+  "label.userAvailableSubscriptionsLabel": "Der aktuelle Benutzer hat",
+  "label.userDeleteSubscriptionWarning": "Sind Sie sicher, dass Sie das Abonnement mit der ID {id} löschen möchten? Diese Aktion kann nicht rückgängig gemacht werden.",
+  "label.userInformation": "Benutzerinformationen",
+  "label.userManageSubscription": "Abonnement verwalten",
+  "label.userManageSubscriptionsLabel": "Um Abonnements zu verwalten.",
   "label.userNoSubscriptions": "Der aktuelle Benutzer hat keine Abonnements verfügbar.",
-  "label.userManageSubscriptionsLabel": "Um Abonnements zu verwalten."
+  "label.userSubscriptions": "Benutzerabonnements",
+  "label.warning": "Warnung"
 }
