#3 - Feat: Add subscription delete handling

--- a/client/src/i18n/de-DE.json
+++ b/client/src/i18n/de-DE.json
@@ -1,4 +1,5 @@
 {
+  "button.abort": "Abbrechen",
   "button.addToCart": "In den Warenkorb",
   "button.addingToCart": "In den Warenkorb legen",
   "button.buy": "Kaufen",
@@ -6,6 +7,7 @@
   "button.checkout": "Zur Kasse",
   "button.clickHere": "Hier klicken",
   "button.close": "Schließen",
+  "button.confirm": "Bestätigen",
   "button.monthlySubscription": "Monatlich",
   "button.pay": "Bezahlen",
   "button.submit": "Absenden",
@@ -29,6 +31,7 @@
   "label.endDate": "Enddatum",
   "label.enterValue": "Geben Sie einen Wert ein, z. B.",
   "label.enterValuePlaceholder": "Geben Sie hier Ihren Wert ein",
+  "label.error": "Fehler",
   "label.loadingFallback": "Laden, bitte warten…",
   "label.loadingProducts": "Produkte werden geladen…",
   "label.loadingSubscriptionProducts": "Abonnementprodukte werden geladen…",
@@ -57,9 +60,12 @@
   "label.subtotal": "Zwischensumme",
   "label.subscriptionId": "Abonnement-ID",
   "label.subscriptionProducts": "Abonnementprodukte",
+  "label.success": "Erfolg",
   "label.update": "Aktualisieren",
   "label.userAvailableSubscriptionsCount": "{count, plural, one {# Abonnement} other {# Abonnements}}",
   "label.userAvailableSubscriptionsLabel": "Der aktuelle Benutzer hat",
+  "label.userDeleteSubscriptionError": "Beim Löschen des Abonnements ist ein Fehler aufgetreten.",
+  "label.userDeleteSubscriptionSuccess": "Abonnement erfolgreich verwaltet.",
   "label.userDeleteSubscriptionWarning": "Sind Sie sicher, dass Sie das Abonnement mit der ID {id} löschen möchten? Diese Aktion kann nicht rückgängig gemacht werden.",
   "label.userInformation": "Benutzerinformationen",
   "label.userManageSubscription": "Abonnement verwalten",
