--- a/client/src/i18n/en-US.json
+++ b/client/src/i18n/en-US.json
@@ -1,4 +1,5 @@
 {
+  "button.abort": "Abort",
   "button.addToCart": "Add to cart",
   "button.addingToCart": "Adding to Cart",
   "button.buy": "Buy",
@@ -6,6 +7,7 @@
   "button.checkout": "Checkout",
   "button.clickHere": "Click here",
   "button.close": "Close",
+  "button.confirm": "Confirm",
   "button.monthlySubscription": "Monthly",
   "button.pay": "Pay",
   "button.submit": "Submit",
@@ -29,6 +31,7 @@
   "label.endDate": "End Date",
   "label.enterValue": "Enter a value, e.g.",
   "label.enterValuePlaceholder": "Enter your value here",
+  "label.error": "Error",
   "label.loadingFallback": "Loading, please wait…",
   "label.loadingProducts": "Loading products…",
   "label.loadingSubscriptionProducts": "Loading subscription products…",
@@ -57,9 +60,12 @@
   "label.subtotal": "Subtotal",
   "label.subscriptionId": "Subscription ID",
   "label.subscriptionProducts": "Subscription Products",
+  "label.success": "Success",
   "label.update": "Update",
   "label.userAvailableSubscriptionsCount": "{count, plural, one {# subscription} other {# subscriptions}}",
   "label.userAvailableSubscriptionsLabel": "The current user has",
+  "label.userDeleteSubscriptionError": "There was an error deleting the subscription.",
+  "label.userDeleteSubscriptionSuccess": "Subscription deleted successfully.",
   "label.userDeleteSubscriptionWarning": "Are you sure you want to cancel the subscription with ID {id}? This action cannot be undone.",
   "label.userInformation": "User Information",
   "label.userManageSubscription": "Manage subscription",
