#3 - Fix: Missing localizaed messages within Subscriptions

--- a/client/src/i18n/de-DE.json
+++ b/client/src/i18n/de-DE.json
@@ -60,6 +60,13 @@
   "label.subtotal": "Zwischensumme",
   "label.subscriptionId": "Abonnement-ID",
   "label.subscriptionProducts": "Abonnementprodukte",
+  "label.subscriptionStatusActive": "Aktiv",
+  "label.subscriptionStatusCanceled": "Storniert",
+  "label.subscriptionStatusIncomplete": "Unvollständig",
+  "label.subscriptionStatusPastDue": "Überfällig",
+  "label.subscriptionStatusTrialing": "Testphase",
+  "label.subscriptionStatusUnpaid": "Unbezahlt",
+  "label.subscriptionStatusUnknown": "Unbekannt",
   "label.success": "Erfolg",
   "label.update": "Aktualisieren",
   "label.userAvailableSubscriptionsCount": "{count, plural, one {# Abonnement} other {# Abonnements}}",
