--- a/client/src/i18n/en-GB.json
+++ b/client/src/i18n/en-GB.json
@@ -60,6 +60,13 @@
   "label.subtotal": "Subtotal",
   "label.subscriptionId": "Subscription ID",
   "label.subscriptionProducts": "Subscription Products",
+  "label.subscriptionStatusActive": "Active",
+  "label.subscriptionStatusCanceled": "Cancelled",
+  "label.subscriptionStatusIncomplete": "Incomplete",
+  "label.subscriptionStatusPastDue": "Overdue",
+  "label.subscriptionStatusTrialing": "On trial",
+  "label.subscriptionStatusUnpaid": "Unpaid",
+  "label.subscriptionStatusUnknown": "Unknown",
   "label.success": "Success",
   "label.update": "Update",
   "label.userAvailableSubscriptionsCount": "{count, plural, one {# subscription} other {# subscriptions}}",
