Feat: add localization

--- a/client/src/i18n/en-GB.json
+++ b/client/src/i18n/en-GB.json
@@ -40,6 +40,7 @@
   "label.loggedInUser": "Currently signed-in user",
   "label.noInformation": "No information available",
   "label.payments": "Payments",
+  "label.product": "Product",
   "label.productCategory": "Product Category",
   "label.productColor": "Colour",
   "label.productDescription": "Product Description",
