--- a/client/src/i18n/en-US.json
+++ b/client/src/i18n/en-US.json
@@ -40,6 +40,7 @@
   "label.loggedInUser": "Currently logged-in user",
   "label.noInformation": "No information available",
   "label.payments": "Payments",
+  "label.product": "Product",
   "label.productCategory": "Product Category",
   "label.productColor": "Color",
   "label.productDescription": "Product Description",
