--- a/client/src/i18n/de-DE.json
+++ b/client/src/i18n/de-DE.json
@@ -33,13 +33,14 @@
   "label.enterValue": "Geben Sie einen Wert ein, z. B.",
   "label.enterValuePlaceholder": "Geben Sie hier Ihren Wert ein",
   "label.error": "Fehler",
-  "label.information": "Information",
+  "label.information": "Angaben",
   "label.loadingFallback": "Laden, bitte warten…",
   "label.loadingProducts": "Produkte werden geladen…",
   "label.loadingSubscriptionProducts": "Abonnementprodukte werden geladen…",
   "label.loggedInUser": "Derzeit angemeldeter Benutzer",
   "label.noInformation": "Keine Informationen verfügbar",
   "label.payments": "Zahlungen",
+  "label.product": "Produkt",
   "label.productCategory": "Produktkategorie",
   "label.productColor": "Farbe",
   "label.productDescription": "Produktbeschreibung",
